# timerr

./: .gitignore  Cargo.toml  LICENSE  README.md  init.md
.github/agents/: Plannermanz.agent.md  Research Assistant.agent.md
.github/workflows/: ci.yml
docs/: dead_code_audit.md
docs/archive/: delete_command_init.md
src/: db.rs  main.rs  models.rs  utils.rs
src/commands/: archived.rs  current.rs  current_stop.rs  delete.rs  instance_add.rs  instance_list.rs  instance_rm.rs  list.rs  mod.rs  start.rs  stop.rs
