[package]
name = "timerr"
version = "0.1.0"
edition = "2021"
authors = ["Russell Winters"]
description = "A simple CLI time tracking application"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
anyhow = "1.0"
dirs = "5.0"
